[gd_scene load_steps=19 format=2]

[ext_resource path="res://components_lib/grab/materials/black.tres" type="Material" id=1]
[ext_resource path="res://components_lib/grab/mesh/main_body_CGLN_20_0801.tres" type="ArrayMesh" id=2]
[ext_resource path="res://components_lib/grab/mesh/grip1.tres" type="ArrayMesh" id=3]
[ext_resource path="res://components_lib/grab/mesh/flange1.tres" type="ArrayMesh" id=4]
[ext_resource path="res://components_lib/grab/mesh/grip3.tres" type="ArrayMesh" id=5]
[ext_resource path="res://components_lib/grab/mesh/fingers1.tres" type="ArrayMesh" id=6]
[ext_resource path="res://components_lib/grab/mesh/rack1.tres" type="ArrayMesh" id=7]
[ext_resource path="res://components_lib/grab/mesh/grip2.tres" type="ArrayMesh" id=8]
[ext_resource path="res://components_lib/grab/materials/dark_gray.tres" type="Material" id=9]
[ext_resource path="res://components_lib/grab/mesh/pillow1.tres" type="ArrayMesh" id=10]
[ext_resource path="res://components_lib/grab/script/grab.gd" type="Script" id=11]
[ext_resource path="res://components_lib/grab/script/grabber_controller.gd" type="Script" id=12]
[ext_resource path="res://components_lib/grab/materials/brown.tres" type="Material" id=13]
[ext_resource path="res://components_lib/grab/materials/silver.tres" type="Material" id=14]
[ext_resource path="res://components_lib/grab/mesh/plate_adjacent1.tres" type="ArrayMesh" id=15]
[ext_resource path="res://components_lib/grab/materials/light_gray.tres" type="Material" id=17]

[sub_resource type="ArrayMesh" id=1]
surfaces/0 = {
"aabb": AABB( -1.06581e-14, -3.55271e-15, -50, 40, 3, 50 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 127, 0, 0, 0, 32, 66, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 127, 0, 0, 0, 32, 66, 0, 0, 64, 64, 0, 0, 0, 0, 0, 0, 127, 0, 0, 0, 32, 66, 0, 0, 64, 64, 0, 0, 0, 0, 0, 0, 127, 0, 0, 0, 0, 0, 0, 0, 64, 64, 0, 0, 128, 40, 0, 0, 127, 0, 0, 0, 64, 168, 0, 0, 128, 167, 0, 0, 72, 194, 129, 0, 0, 0, 0, 0, 64, 168, 0, 0, 128, 167, 0, 0, 72, 194, 129, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 129, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 64, 0, 0, 128, 40, 129, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 64, 0, 0, 128, 40, 129, 0, 0, 0, 0, 0, 0, 168, 0, 0, 64, 64, 0, 0, 72, 194, 129, 0, 0, 0, 0, 0, 32, 66, 0, 0, 128, 167, 0, 0, 72, 194, 0, 0, 129, 0, 0, 0, 64, 168, 0, 0, 128, 167, 0, 0, 72, 194, 0, 0, 129, 0, 0, 0, 0, 168, 0, 0, 64, 64, 0, 0, 72, 194, 0, 0, 129, 0, 0, 0, 32, 66, 0, 0, 64, 64, 0, 0, 72, 194, 0, 0, 129, 0, 0, 0, 32, 66, 0, 0, 0, 0, 0, 0, 0, 0, 127, 0, 0, 0, 0, 0, 32, 66, 0, 0, 0, 0, 0, 0, 0, 0, 127, 0, 0, 0, 0, 0, 32, 66, 0, 0, 128, 167, 0, 0, 72, 194, 127, 0, 0, 0, 0, 0, 32, 66, 0, 0, 64, 64, 0, 0, 72, 194, 127, 0, 0, 0, 0, 0, 32, 66, 0, 0, 64, 64, 0, 0, 72, 194, 127, 0, 0, 0, 0, 0, 32, 66, 0, 0, 64, 64, 0, 0, 0, 0, 127, 0, 0, 0, 0, 0, 32, 66, 0, 0, 64, 64, 0, 0, 0, 0, 0, 127, 0, 0, 0, 0, 32, 66, 0, 0, 64, 64, 0, 0, 72, 194, 0, 127, 0, 0, 0, 0, 32, 66, 0, 0, 64, 64, 0, 0, 72, 194, 0, 127, 0, 0, 0, 0, 0, 168, 0, 0, 64, 64, 0, 0, 72, 194, 0, 127, 0, 0, 0, 0, 0, 0, 0, 0, 64, 64, 0, 0, 128, 40, 0, 127, 0, 0, 0, 0, 0, 0, 0, 0, 64, 64, 0, 0, 128, 40, 0, 127, 0, 0, 0, 0, 32, 66, 0, 0, 128, 167, 0, 0, 72, 194, 0, 129, 0, 0, 0, 0, 64, 168, 0, 0, 128, 167, 0, 0, 72, 194, 0, 129, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 129, 0, 0, 0, 0, 32, 66, 0, 0, 0, 0, 0, 0, 0, 0, 0, 129, 0, 0 ),
"array_index_data": PoolByteArray( 3, 0, 2, 0, 0, 0, 4, 0, 1, 0, 5, 0, 9, 0, 8, 0, 6, 0, 10, 0, 7, 0, 11, 0, 14, 0, 13, 0, 12, 0, 14, 0, 12, 0, 15, 0, 19, 0, 18, 0, 16, 0, 20, 0, 17, 0, 21, 0, 24, 0, 27, 0, 25, 0, 23, 0, 22, 0, 26, 0, 28, 0, 29, 0, 30, 0, 28, 0, 30, 0, 31, 0 ),
"blend_shape_data": [  ],
"format": 97539,
"index_count": 36,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 32
}

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 25, 20 )

[node name="grab" type="Spatial"]
script = ExtResource( 11 )
lifted_of_arms_mm = 70.0
Grab = NodePath("grab/RcsGrabber")
joint_1_path = NodePath("grab/RcsToggleJoint1")
joint_2_path = NodePath("grab/RcsToggleJoint2")
grab_state = false

[node name="grab" type="Spatial" parent="."]

[node name="flange1" type="MeshInstance" parent="grab"]
transform = Transform( 4.37114e-08, 6.75281e-15, -1, 1.50996e-07, -1, -1.52573e-16, -1, -1.50996e-07, -4.37114e-08, -0.000328064, 0.000106812, 23.0004 )
material_override = ExtResource( 14 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 14 )

[node name="main_body_CGLN_20_0801" type="MeshInstance" parent="grab"]
transform = Transform( 1, 0, 0, 0, -1, 4.44089e-16, 0, -4.44089e-16, -1, 0.00166321, 32.4963, 50.0004 )
material_override = ExtResource( 17 )
mesh = ExtResource( 2 )
material/0 = null

[node name="plate_adjacent1" type="MeshInstance" parent="grab"]
transform = Transform( 0, 0, -1, 1, 0, 0, 0, -1, 0, -64.7291, 79.9991, 26.7189 )
material_override = ExtResource( 1 )
mesh = ExtResource( 15 )
material/0 = ExtResource( 1 )

[node name="RcsToggleJoint1" type="RcsToggleJoint" parent="grab"]
rotation_axis = Vector3( 0, 0, 0 )
translation_axis = Vector3( 1, 0, 0 )
ToggleEnabled = true
TogglePositive = false
MaxBorder = -15.0
MinBorder = 0.0
MaxBorderThreshold = 1.0
Throttle = 200.0

[node name="fingers1" type="MeshInstance" parent="grab/RcsToggleJoint1"]
transform = Transform( -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0, 1, 100.502, 26.996, 95.9 )
redirect_selection = true
material_override = ExtResource( 9 )
mesh = ExtResource( 6 )
material/0 = ExtResource( 9 )
material/1 = ExtResource( 9 )

[node name="rack1" type="MeshInstance" parent="grab/RcsToggleJoint1/fingers1"]
transform = Transform( -1.19209e-07, -1, 0, 1, -1.19209e-07, 0, 0, 0, 1, 41.1, -180, -58 )
redirect_selection = true
material_override = ExtResource( 17 )
mesh = ExtResource( 7 )
material/0 = ExtResource( 17 )

[node name="rack2" type="MeshInstance" parent="grab/RcsToggleJoint1/fingers1"]
transform = Transform( -1.19209e-07, -1, 0, 1, -1.19209e-07, 0, 0, 0, 1, 12, -180, -38 )
redirect_selection = true
material_override = ExtResource( 17 )
mesh = ExtResource( 7 )
material/0 = ExtResource( 17 )

[node name="grip11" type="MeshInstance" parent="grab/RcsToggleJoint1/fingers1"]
transform = Transform( 1.19209e-07, 1.62921e-07, 1, -1, -3.25841e-07, 1.19209e-07, 3.25841e-07, -1, 1.62921e-07, 54.015, -59, 64 )
redirect_selection = true
material_override = ExtResource( 1 )
mesh = ExtResource( 3 )
material/0 = ExtResource( 1 )
material/1 = ExtResource( 1 )

[node name="grip12" type="MeshInstance" parent="grab/RcsToggleJoint1/fingers1"]
transform = Transform( 1.19209e-07, 1.94707e-07, 1, -1, -2.8213e-07, 1.19209e-07, 2.8213e-07, -1, 1.94707e-07, 54, -59, 64 )
redirect_selection = true
material_override = ExtResource( 1 )
mesh = ExtResource( 8 )
material/0 = ExtResource( 1 )
material/1 = ExtResource( 1 )

[node name="grip13" type="MeshInstance" parent="grab/RcsToggleJoint1/fingers1"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -49, 0 )
redirect_selection = true
material_override = ExtResource( 1 )
mesh = ExtResource( 5 )
material/0 = null

[node name="pillow1" type="MeshInstance" parent="grab/RcsToggleJoint1/fingers1/grip13"]
transform = Transform( -4.37114e-08, -1.19209e-07, -1, -1, -4.37114e-08, 4.37114e-08, -4.37114e-08, 1, -1.19209e-07, 2, -12, -13 )
redirect_selection = true
material_override = ExtResource( 13 )
mesh = SubResource( 1 )
material/0 = ExtResource( 13 )

[node name="RcsToggleJoint2" type="RcsToggleJoint" parent="grab"]
rotation_axis = Vector3( 0, 0, 0 )
translation_axis = Vector3( 1, 0, 0 )
ToggleEnabled = true
TogglePositive = false
MaxBorder = 15.0
MinBorder = 0.0
MaxBorderThreshold = 1.0
Throttle = 200.0

[node name="fingers2" type="MeshInstance" parent="grab/RcsToggleJoint2"]
transform = Transform( -1.19209e-07, -1, 0, 1, -1.19209e-07, 0, 0, 0, 1, -100.485, -27.004, 95.9 )
redirect_selection = true
material_override = ExtResource( 9 )
mesh = ExtResource( 6 )
material/0 = ExtResource( 9 )
material/1 = ExtResource( 9 )

[node name="rack3" type="MeshInstance" parent="grab/RcsToggleJoint2/fingers2"]
transform = Transform( -1.19209e-07, 1, 0, -1, -1.19209e-07, 0, 0, 0, 1, 41.1003, 0, -57.9996 )
redirect_selection = true
material_override = ExtResource( 17 )
mesh = ExtResource( 7 )
material/0 = ExtResource( 17 )

[node name="rack4" type="MeshInstance" parent="grab/RcsToggleJoint2/fingers2"]
transform = Transform( -1.19209e-07, 1, 0, -1, -1.19209e-07, 0, 0, 0, 1, 12.0003, 0, -37.9996 )
redirect_selection = true
material_override = ExtResource( 17 )
mesh = ExtResource( 7 )
material/0 = ExtResource( 17 )

[node name="grip21" type="MeshInstance" parent="grab/RcsToggleJoint2/fingers2"]
transform = Transform( -1.19209e-07, 1.62921e-07, 1, -1, -1.94216e-14, -1.19209e-07, 0, -1, 1.62921e-07, 53.918, -59, 64 )
redirect_selection = true
material_override = ExtResource( 1 )
mesh = ExtResource( 3 )
material/0 = ExtResource( 1 )
material/1 = ExtResource( 1 )

[node name="grip22" type="MeshInstance" parent="grab/RcsToggleJoint2/fingers2"]
transform = Transform( -1.19209e-07, 1.94707e-07, 1, -1, -4.37114e-08, -1.19209e-07, 4.37114e-08, -1, 1.94707e-07, 54, -59, 64 )
redirect_selection = true
material_override = ExtResource( 1 )
mesh = ExtResource( 8 )
material/0 = ExtResource( 1 )
material/1 = ExtResource( 1 )

[node name="grip23" type="MeshInstance" parent="grab/RcsToggleJoint2/fingers2"]
transform = Transform( 1, -3.2584e-07, -1.42429e-14, 0, -4.37114e-08, 1, -3.2584e-07, -1, -4.37114e-08, 0, -49, 0 )
redirect_selection = true
material_override = ExtResource( 1 )
mesh = ExtResource( 5 )
material/0 = null

[node name="pillow2" type="MeshInstance" parent="grab/RcsToggleJoint2/fingers2/grip23"]
transform = Transform( -2.8213e-07, -1.19209e-07, 1, -1, 1.31134e-07, -2.8213e-07, -1.31134e-07, -1, -1.19209e-07, 52, -12, -10 )
redirect_selection = true
material_override = ExtResource( 13 )
mesh = ExtResource( 10 )
material/0 = ExtResource( 13 )

[node name="RcsGrabber" type="RcsGrabber" parent="grab"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 127.9 )
grab = null
drop = null
delete_captured_parts = null
disable_captured_parts = null

[node name="CollisionShape" type="CollisionShape" parent="grab/RcsGrabber"]
transform = Transform( 38.4933, 0, 0, 0, 1, -1.50995e-07, 0, 1.50995e-07, 1, 0, 0, 0 )
shape = SubResource( 2 )

[node name="dido_arms2" type="RcsSignalsHolder" parent="."]
sensors/add_sensor = null
executive_devices/add_device = null

[node name="grabber_controller" type="Node" parent="."]
script = ExtResource( 12 )
grabber_path = NodePath("")
dido_path = NodePath("")
gripped_1_di = 0
gripped_2_di = 0
grab_do = 0

[node name="safety_arms2" type="RcsSafetySignals" parent="."]
sensors/add_sensor = null
executive_devices/add_device = null
